# cvn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md
cmake/: CvnMacros.cmake  cvnConfig.cmake.in  cvnConfig.in.cmake  proj_version_file.cmake
example/: CMakeLists.txt
example/apputil/: CMakeLists.txt  cpptmpl.cpp
src/: .gitignore  CMakeLists.txt  TmplApp.cpp  TmplApp.h  cpptmpl.cpp  cpptmpl.h
src/Apputil/: CMakeLists.txt
src/Apputil/include/Cvn/Apputil/: QtApplication.h  TmplApp.h  VPlayer.h
src/Apputil/sample/: AppWin.cpp  AppWin.h  CMakeLists.txt  cvn_qt_app.cpp
src/Apputil/src/: AppWidget.cpp  QtApplication.cpp  QtScheduler.cpp  TmplApp.cpp
src/Apputil/src/qplayer/: VPlayer.cpp
src/Apputilqt/: Apputilqt.pro  CMakeLists.txt
src/Apputilqt/cmake/: ApputilqtConfig.in.cmake
src/Apputilqt/include/Cvn/Apputilqt/: DirView.h  FocusWidget.h  HistogramWidget.h  ImageListModel.h  ImageViewer.h  Player.h  PlayerControls.h  PlaylistModel.h  QAudioLevel.h  QtApplication.h  QtRx.h  QtScheduler.h  VPlayer.h  VideoWidget.h
src/Apputilqt/sample/: AppWin.cpp  AppWin.h  CMakeLists.txt  cvn_qt_app.cpp
src/Apputilqt/src/: AppWidget.cpp  AppWidget.h  DirView.cpp  HistogramWidget.cpp  ImageItemDelegate.cpp  ImageItemDelegate.h  ImageListModel.cpp  ImageViewer.cpp  Player.cpp  PlayerControls.cpp  PlaylistModel.cpp  QtApplication.cpp  QtRx.cpp  QtScheduler.cpp  VideoWidget.cpp  apputilqtwidget.cpp  imageitemdelegate.cpp  imageitemdelegate.h
src/Apputilqt/src/qplayer/: VPlayer.cpp
src/Caffe2util/: CMakeLists.txt
src/Caffe2util/cmake/: Caffe2utilConfig.in.cmake
src/Caffe2util/include/Cvn/Caffe2util/: CPredictor.h
src/Caffe2util/sample/: CMakeLists.txt  ocv_caffe2_predictor.cpp
src/Caffe2util/src/: CPredictor.cpp
src/Cvutil/: CMakeLists.txt
src/Cvutil/cmake/: CvutilConfig.in.cmake
src/Cvutil/include/Cvn/Cvutil/: ImageCapture.h  ImageIo.h  cp2tform.h
src/Cvutil/src/: ImageCapture.cpp  cp2tform.cpp
src/Face/: CMakeLists.txt
src/Face/Base/: CMakeLists.txt
src/Face/Base/cmake/: FaceBaseConfig.in.cmake
src/Face/Base/include/Cvn/Face/Base/: Align.h  Face.h  FaceLandmarks.h
src/Face/Base/src/: Face.cpp  FaceLandmarks.cpp
src/Face/Caffe2/: CMakeLists.txt
src/Face/Caffe2/cmake/: FaceCaffe2Config.in.cmake
src/Face/Caffe2/include/Cvn/Face/Caffe2/: extract.h  sphereface.h
src/Face/Caffe2/sample/: CMakeLists.txt  ocv_feature_extract.cpp  ocv_feature_extract_h5.cpp  ocv_feature_index.cpp  ocv_feature_index_falconn.cpp
src/Face/Caffe2/src/: extract.cpp  sphereface.cpp
src/Face/Faceview/: AppWin.cpp  AppWin.h  CMakeLists.txt  sample_apputil_qt.cpp
src/Face/Lmtcnn/: CMakeLists.txt
src/Face/Lmtcnn/include/Cvn/Face/Lmtcnn/: mtcnn.h  network.h
src/Face/Lmtcnn/samples/: CMakeLists.txt  ocv_face_detector_lmtcnn.cpp  ocv_face_track_lmtcnn.cpp
src/Face/Lmtcnn/src/: mtcnn.cpp  network.cpp  pBox.cpp
src/Face/Ocv/: CMakeLists.txt
src/Face/Ocv/cmake/: FaceOcvConfig.in.cmake
src/Face/Ocv/sample/: CMakeLists.txt  ocv_face_headpose.cpp  ocv_face_track.cpp  ocv_image_import.cpp
src/Face/Ocv/src/sample/: CMakeLists.txt  ocv_face_detector.cpp  ocv_face_landmark.cpp  ocv_face_track.cpp  ocv_image_import.cpp
src/Face/Ocvmtcnn/: CMakeLists.txt
src/Face/Ocvmtcnn/cmake/: FaceOcvmtcnnConfig.in.cmake
src/Face/Ocvmtcnn/samples/: CMakeLists.txt  ocv_face_detector_ocvmtcnn.cpp  ocv_face_track_ocvmtcnn.cpp  ocv_face_track_ocvmtcnn_cv.cpp
src/Face/Ocvmtcnn/src/: detector.cc  onet.cc  pnet.cc  rnet.cc
src/NMS/: CMakeLists.txt
src/NMS/NMS/: CMakeLists.txt
src/NMS/NMS/cmake/: NMSUtilConfig.in.cmake
src/NMS/NMS/include/Cvn/NMS/NMS/: QueryService.h
src/NMS/NMS/src/: QueryService.cpp  QueryService_impl.cpp  QueryService_impl.hpp  QueryService_server.cpp
src/apputil/: CMakeLists.txt  TmplApp.cpp  TmplApp.h
src/apputil/cmake/: apputilConfig.cmake.in
src/face/base/: CMakeLists.txt
src/face/ocv/: CMakeLists.txt
test/: CMakeLists.txt  test_catch.cpp  test_cereal.cpp  test_expected.cpp  test_fmt.cpp  test_json.cpp  test_main.cpp  test_sqlite_orm.cpp
